<resources>
    <string name="app_name">NMedia</string>
    <string name="some_text">NMedia!</string>
    <string name="description_avatar">User avatar</string>
    <string name="option_action_remove">Remove</string>
    <string name="post_text">Edit post text</string>
    <string name="description_save_button">Save button</string>
    <string name="error_empty_context">Can\'t save empty text</string>
    <string name="option_action_edit">Edit</string>
    <string name="edit_cancel_button">Edit cancel button</string>
    <string name="edit_post_title">Edit post</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_edit">Edit post</string>
    <string name="title_create">New post</string>
    <string name="action_create">Create post</string>
    <string name="youtube_link_text">Youtube link</string>
    <string name="error_youtube_link">Bad youtube link!</string>
    <string name="google_api_unavailable">Google Api unavailable</string>
    <string name="channel_remote_name">Main Channel</string>
    <string name="channel_remote_description">Variety of notifications</string>
    <string name="notification_user_like">%1$s like post %2$s!</string>
    <string name="notification_user_new_post">%1$s add new post!</string>
    <string name="error_loading">Loading…</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">No posts</string>
    <string name="error_text">Error has occurred</string>
    <string name="error_request_message">Request failed</string>
    <string name="action_select_photo">Select photo</string>
    <string name="action_take_photo">Make photo</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="name">Name</string>
    <string name="sign_in_explanation">Signing in to your account</string>
    <string name="auth_error_message">Ошибка авторизации</string>
</resources>