<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="?attr/actionBarSize"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="content,oldContentLayout" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:hint="@string/post_text"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLines="6"
        android:minHeight="?attr/actionBarSize"
        android:padding="@dimen/default_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/save"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:contentDescription="@string/description_save_button"
        android:padding="@dimen/default_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_save_24" />

    <LinearLayout
        android:id="@+id/oldContentLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/content"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/oldContentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingStart="@dimen/default_spacing"
            android:paddingTop="@dimen/default_spacing"
            android:paddingEnd="@dimen/default_spacing"
            android:text="@string/edit_post_title"
            android:textColor="@color/purple_700"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/oldContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingStart="@dimen/default_spacing"
            android:paddingTop="4dp"
            android:paddingEnd="@dimen/default_spacing"
            android:paddingBottom="@dimen/default_spacing"
            tools:text="Some text" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.5"
            android:background="@color/black" />
    </LinearLayout>

    <ImageView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:contentDescription="@string/edit_cancel_button"
        android:padding="@dimen/default_spacing"
        app:layout_constraintBottom_toBottomOf="@+id/oldContentLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/oldContentLayout"
        app:srcCompat="@drawable/ic_baseline_close_24" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/editCancelGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="oldContentLayout,cancel"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>